[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "url-shorten-api"
version = "1.0.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic-settings",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]